# sqlx-exasol

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  main.yaml  main.yml  publish.yaml
.sqlx/: query-055568969cccd119506aca28b76acd233df57fe24ac09745cac91093ba373e15.json  query-062a5e324734a06c158364ca58ef70099acd533ec5fe97f594f3bf6436f65265.json  query-07a6c51ee278a56a95e947d1f334277c85ed788706d6f7c124eae06871feba87.json  query-13b0544bc6ffe194e012de3ab2b3f7fbf1bea457355063c72f38cef3d4f15a75.json  query-1798fb8c66823e371b0306d1cefbf5923d1d6f9d6992535049cdfb0d7b2843bf.json  query-261a60d57dcba09d6eb87d34075af62881f6ffa7bd84f59cf36a924e1491bf86.json  query-28e676d849d1616a5367689cd08b3c2e75485ca780ac68b8958655519a2e9c4e.json  query-3668c47214ddace8738583bac9b3decc8732b53fc485e97236f9334aa2fd7695.json  query-3a440d2f78336da17378656559d1111aeecb59f6d05c212c0e782e7b7934f6c8.json  query-3d7b290979aed5237a60b63986548fb3c56f294eca83b2352028492f1bbca75b.json  query-3de26dc7f09e58f035e070de3abb78014ae692a51eceb2e7f54ead6605153e11.json  query-41b6bedd2a8b479ed69e612db316dbf9d6878594d1996a79e095fda38cb3a9af.json  query-41e61e0dabe984c30c95013d0a1683696a6fcf21759cef358c48b253efaee977.json  query-450079655abddaeec26a10d192cffc83489d22f870c0c6291269525b7fe3dcb0.json  query-522920bc730a9eff91d99c4d148fd3d8ab7639b650f9eb4ee694f07a2f503fc6.json  query-5a75a4ca4710d23f95967028da7b3f556df2ca97272dee3e1b02f6c66f0bf587.json  query-5e1cd1e73985ddd52fa73e8d29176dfe4c7c5007b6dfe9e63fdbb05979d708a8.json  query-5ecd2cff8d4a816171faec58d67f45467bd18bda667110fb0efe2efc326e86a3.json  query-653ed8098c4599902a2af5d9f0bee1179e8e875a80446e04f6b7447f94eb2fd1.json  query-6dbc5fa76ade6b4e760b40d0f98a2cd1022b35cdbeef78bc626c20a5d2bbb6eb.json  query-815b980e8e162a452678484dd753e341a4806e206599b5c5d1d08d4b7b66a8ad.json  query-81b4ade0a5a7215dd3017b100782145518492f8b6f662018fcccfe66356777b9.json  query-8321407ac20b9c436b7df04c8e365c016777f44011bc9854a0e9e60e1398eeba.json  query-840ff949e0c9f6fbdd705430b5b24956567b399761d6466933b5f026661a3319.json  query-893ae1614d107a99ef9f206996dfa9b50676cf8c32860d07648b564c16a17af7.json  query-91e31f8260972a96aad75a4438b2727a48449fd70fd28d44d2d9d67c5e0059ec.json  query-946d756b9e0821ef66916722e44ef249429458b2ef54e46bce72f76a1ef63753.json  query-990ff677752a7d412718de81c7aec9df7ed783f6a57ea07f4ee615083afd9656.json  query-9c1c57fd0b7de481c4290d26f7e5b67cfcb55a1a66161cee89f670dd113f3c71.json  query-b67ec9400282c642ee1ca8d9ac7ee9977eb5099667c1ed999da283d010b43ed1.json  query-b7c21c8b73969b30dbf4768febd07a416bb655a1f96f20206abfec1fabc48f6a.json  query-d365eb26b4c8f44b659383e2e16d116eda810ec34c915172f0981d90b94ca5c3.json  query-d8a7b48efe1f22930a701ec953a2acbc5b014d5e7020fe7188a4b647b8f589e7.json  query-e61fc2c50d09b4f2acf877477e262aff2b3a3914ee7aa12278adc53083ef81fa.json  query-e84e3b6f74283a5215059b5e88cfc7f2b875ccafe30391751d3e432a7c3e601d.json  query-ea76fbbc69c1941fe6baba8969b04ad3cf07b7ccd4f2b3b10e7eed32346b3855.json  query-f0e049d4d9e125c5459855bc5a9f1c12e4809ab4d02e8879044c2c060214c7d8.json  query-fd240e87b541a74dc85c6990ebf44eb91b458c4076d3e25049a9ad8ac706fafa.json
.zed/: settings.json
sqlx-exasol-cli/: Cargo.toml
sqlx-exasol-cli/src/: cargo-sqlx-exasol.rs  main.rs  sqlx-exasol.rs
sqlx-exasol-impl/: Cargo.toml
sqlx-exasol-impl/src/: any.rs  arguments.rs  column.rs  database.rs  error.rs  lib.rs  migrate.rs  query_result.rs  row.rs  statement.rs  testing.rs  transaction.rs  type_checking.rs  type_info.rs  value.rs
sqlx-exasol-impl/src/arguments/: geo_types.rs  json.rs  mod.rs
sqlx-exasol-impl/src/connection/: executor.rs  mod.rs  stream.rs
sqlx-exasol-impl/src/connection/etl/: error.rs  mod.rs  query.rs  server.rs  socket_io.rs
sqlx-exasol-impl/src/connection/etl/export/: compression.rs  mod.rs  options.rs  reader.rs  service.rs
sqlx-exasol-impl/src/connection/etl/import/: compression.rs  mod.rs  options.rs  service.rs  writer.rs
sqlx-exasol-impl/src/connection/etl/job/: mod.rs  socket_addr.rs
sqlx-exasol-impl/src/connection/etl/job/maybe_tls/: mod.rs
sqlx-exasol-impl/src/connection/etl/job/maybe_tls/tls/: mod.rs  native_tls.rs  rustls.rs
sqlx-exasol-impl/src/connection/websocket/: future.rs  mod.rs  request.rs  socket.rs  tls.rs
sqlx-exasol-impl/src/connection/websocket/transport/: compressed.rs  mod.rs
sqlx-exasol-impl/src/options/: builder.rs  compression.rs  error.rs  mod.rs  protocol_version.rs  ssl_mode.rs
sqlx-exasol-impl/src/responses/: attributes.rs  columns.rs  describe.rs  error.rs  fetch.rs  prepared_stmt.rs  public_key.rs  session_info.rs
sqlx-exasol-impl/src/types/: array.rs  ascii.rs  bigdecimal.rs  bool.rs  chrono.rs  float.rs  geo_types.rs  hashtype.rs  int.rs  interval_ytm.rs  iter.rs  json.rs  mod.rs  option.rs  rust_decimal.rs  str.rs  text.rs  uint.rs  uuid.rs
sqlx-exasol-impl/src/types/chrono/: date.rs  datetime.rs  mod.rs  timedelta.rs
sqlx-exasol-impl/src/types/interval/: dts.rs  mod.rs  ytm.rs
sqlx-exasol-impl/src/types/time/: date.rs  datetime.rs  duration.rs  mod.rs
sqlx-exasol-macros/: Cargo.toml
sqlx-exasol-macros/src/: lib.rs  parse.rs
src/: .rustfmt.toml  arguments.rs  column.rs  command.rs  database.rs  error.rs  lib.md  lib.rs  macros.rs  migrate.rs  query_result.rs  request.rs  row.rs  statement.rs  testing.rs  transaction.rs  ty_match.rs  type_info.rs  types.md  value.rs
src/connection/: executor.rs  macros.rs  mod.rs  query_splitter.rs  stream.rs
src/options/: builder.rs  error.rs  login.rs  mod.rs  protocol_version.rs  serializable.rs
src/responses/: attributes.rs  describe.rs  error.rs  hosts.rs  mod.rs  prepared_stmt.rs  public_key.rs  result.rs
src/ty_match/: extension.rs  mod.rs
tests/: ascii.rs  bigdecimal.rs  bool.rs  chrono.rs  common.rs  compile_time.rs  derive.rs  describe.rs  error.rs  etl.rs  float.rs  from_row.rs  geo_types.rs  geometry.rs  hashtype.rs  int.rs  interval.rs  interval_ytm.rs  invalid.rs  io.rs  json.rs  macros.rs  migrate.rs  rust_decimal.rs  simple_compression.rs  str.rs  test-attr.rs  test_attr.rs  time.rs  uint.rs  uuid.rs
(+103 files in other folders)
