[workspace]
members = [".", "sqlx-exasol-cli", "sqlx-exasol-impl", "sqlx-exasol-macros"]

[workspace.package]
version = "0.9.0-alpha.1"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/bobozaur/sqlx-exasol"
keywords = ["database", "sql", "exasol", "sqlx", "driver"]
categories = ["database", "asynchronous"]
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]

[package]
name = "sqlx-exasol"
documentation = "https://docs.rs/sqlx-exasol"
description = "Exasol driver for the SQLx framework."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
exclude = ["tests/*"]

[package.metadata.docs.rs]
features = [
    "etl",
    "bigdecimal",
    "chrono",
    "rust_decimal",
    "time",
    "uuid",
    "compression",
    "migrate",
    "macros",
]

[features]
default = ["any", "macros", "migrate", "json"]

derive = ["sqlx/derive", "sqlx-exasol-macros?/derive"]
macros = ["derive", "sqlx/macros", "sqlx-exasol-macros/macros"]
migrate = [
    "sqlx/migrate",
    "sqlx-exasol-impl/migrate",
    "sqlx-exasol-macros?/migrate",
]

# Base runtime features without TLS
runtime-async-std = ["sqlx/runtime-async-std"]
runtime-tokio = ["sqlx/runtime-tokio"]

# TLS features
tls-native-tls = ["sqlx/tls-native-tls", "sqlx-exasol-impl/native-tls"]
tls-rustls-aws-lc-rs = [
    "sqlx/tls-rustls-aws-lc-rs",
    "sqlx-exasol-impl/rustls-aws-lc-rs",
]
tls-rustls-ring-webpki = [
    "sqlx/tls-rustls-ring-webpki",
    "sqlx-exasol-impl/rustls-ring",
]
tls-rustls-ring-native-roots = [
    "sqlx/tls-rustls-ring-native-roots",
    "sqlx-exasol-impl/rustls-ring",
]

# Database
any = ["sqlx/any", "sqlx-exasol-impl/any"]

# Types
bigdecimal = [
    "sqlx/bigdecimal",
    "sqlx-exasol-impl/bigdecimal",
    "sqlx-exasol-macros?/bigdecimal",
]
chrono = [
    "sqlx/chrono",
    "sqlx-exasol-impl/chrono",
    "sqlx-exasol-macros?/chrono",
]
geo-types = ["sqlx-exasol-impl/geo-types", "sqlx-exasol-macros?/geo-types"]
json = ["sqlx/json", "sqlx-exasol-impl/json", "sqlx-exasol-macros?/json"]
rust_decimal = [
    "sqlx/rust_decimal",
    "sqlx-exasol-impl/rust_decimal",
    "sqlx-exasol-macros?/rust_decimal",
]
time = ["sqlx/time", "sqlx-exasol-impl/time", "sqlx-exasol-macros?/time"]
uuid = ["sqlx/uuid", "sqlx-exasol-impl/uuid", "sqlx-exasol-macros?/uuid"]

# Driver specific features
compression = ["sqlx-exasol-impl/compression"]
etl = ["sqlx-exasol-impl/etl"]

[workspace.dependencies]
# Internal
sqlx-exasol = { path = "." }
sqlx-exasol-macros = { path = "sqlx-exasol-macros" }
sqlx-exasol-impl = { path = "sqlx-exasol-impl" }

# External
anyhow = { version = "1", default-features = false }
arrayvec = { version = "0.7", default-features = false }
async-compression = { version = "0.4", default-features = false, features = [
    "futures-io",
    "gzip",
    "zlib",
] }
async-tungstenite = { version = "0.29", default-features = false, features = [
    "handshake",
    "futures-03-sink",
] }
base64 = { version = "0.22", default-features = false }
bigdecimal = { version = "0.4", default-features = false, features = [
    "std",
    "serde-json",
] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", default-features = false, features = ["derive"] }
console = { version = "0.15", default-features = false }
dotenvy = { version = "0.15", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = [
    "sink",
] }
futures-core = { version = "0.3", default-features = false }
geo-types = { version = "0.7", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1.4", default-features = false, features = [
    "server",
    "http1",
] }
lru = { version = "0.12", default-features = false }
native-tls = { version = "0.2", default-features = false }
paste = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false, features = [
    "std",
    "std_rng",
] }
rcgen = { version = "0.13", default-features = false, features = ["pem"] }
rsa = { version = "0.9", default-features = false, features = ["pem", "std"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
] }
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1", default-features = false, features = [
    "std",
    "raw_value",
] }
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "a9fb5816264694880d57c6de7f8acb9509858d3f", default-features = false }
sqlx-cli = { git = "https://github.com/launchbadge/sqlx", rev = "a9fb5816264694880d57c6de7f8acb9509858d3f", default-features = false }
sqlx-core = { git = "https://github.com/launchbadge/sqlx", rev = "a9fb5816264694880d57c6de7f8acb9509858d3f", default-features = false, features = [
    "offline",
    "migrate",
] }
sqlx-macros-core = { git = "https://github.com/launchbadge/sqlx", rev = "a9fb5816264694880d57c6de7f8acb9509858d3f", default-features = false }
syn = { version = "2", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
thiserror = { version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = [
    "std",
    "serde",
    "formatting",
    "parsing",
    "macros",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["serde"] }
wkt = { version = "0.14", default-features = false, features = [
    "geo-types",
    "serde",
] }

[dependencies]
sqlx-exasol-macros = { workspace = true, optional = true }
sqlx-exasol-impl = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
