[workspace]
members = [".", "sqlx-exasol-cli", "sqlx-exasol-impl", "sqlx-exasol-macros"]

[workspace.package]
version = "0.9.2"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/bobozaur/sqlx-exasol"
keywords = ["database", "sql", "exasol", "sqlx", "driver"]
categories = ["database", "asynchronous"]
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]

[package]
name = "sqlx-exasol"
documentation = "https://docs.rs/sqlx-exasol"
description = "Exasol driver for the SQLx framework."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
exclude = ["tests/*"]

# Note: written so that it may be copy-pasted to other crates
[package.metadata.docs.rs]
features = ["_unstable-docs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["any", "macros", "migrate", "json"]

derive = ["sqlx-exasol-macros/derive", "sqlx-orig/derive"]
macros = ["derive", "sqlx-exasol-macros/macros", "sqlx-orig/macros"]
migrate = [
  "sqlx-core/migrate",
  "sqlx-exasol-macros/migrate",
  "sqlx-exasol-impl/migrate",
]

# Enable parsing of `sqlx.toml` for configuring macros and migrations.
sqlx-toml = ["sqlx-core/sqlx-toml", "sqlx-exasol-macros?/sqlx-toml"]

# intended mainly for CI and docs
all-databases = ["any"]
_unstable-all-types = [
  "bigdecimal",
  "rust_decimal",
  "json",
  "time",
  "chrono",
  "uuid",
  "geo-types",
]

# Render documentation that wouldn't otherwise be shown (e.g. `sqlx_core::config`).
_unstable-docs = ["all-databases", "_unstable-all-types", "etl", "compression"]

# Base runtime features without TLS
runtime-async-global-executor = [
  "_rt-async-global-executor",
  "sqlx-core/_rt-async-global-executor",
  "sqlx-exasol-macros?/_rt-async-global-executor",
]
runtime-async-std = [
  "_rt-async-std",
  "sqlx-core/_rt-async-std",
  "sqlx-exasol-macros?/_rt-async-std",
]
runtime-smol = [
  "_rt-smol",
  "sqlx-core/_rt-smol",
  "sqlx-exasol-macros?/_rt-smol",
]
runtime-tokio = [
  "_rt-tokio",
  "sqlx-core/_rt-tokio",
  "sqlx-exasol-macros?/_rt-tokio",
]

# TLS features
tls-native-tls = [
  "sqlx-core/_tls-native-tls",
  "sqlx-exasol-macros?/_tls-native-tls",
  "sqlx-exasol-impl/native-tls",
]
tls-rustls = ["tls-rustls-ring"] # For backwards compatibility
tls-rustls-aws-lc-rs = [
  "sqlx-core/_tls-rustls-aws-lc-rs",
  "sqlx-exasol-macros?/_tls-rustls-aws-lc-rs",
  "sqlx-exasol-impl/rustls-aws-lc-rs",
]
tls-rustls-ring = ["tls-rustls-ring-webpki"] # For backwards compatibility
tls-rustls-ring-webpki = [
  "sqlx-core/_tls-rustls-ring-webpki",
  "sqlx-exasol-macros?/_tls-rustls-ring-webpki",
  "sqlx-exasol-impl/rustls-ring",
]
tls-rustls-ring-native-roots = [
  "sqlx-core/_tls-rustls-ring-native-roots",
  "sqlx-exasol-macros?/_tls-rustls-ring-native-roots",
  "sqlx-exasol-impl/rustls-ring",
]

# No-op feature used by the workflows to compile without TLS enabled. Not meant for general use.
tls-none = []

# for conditional compilation
_rt-async-global-executor = []
_rt-async-std = []
_rt-smol = []
_rt-tokio = []

# database
any = ["sqlx-core/any", "sqlx-exasol-impl/any"]

# types
json = ["sqlx-core/json", "sqlx-exasol-macros?/json", "sqlx-exasol-impl/json"]

bigdecimal = [
  "sqlx-core/bigdecimal",
  "sqlx-exasol-macros?/bigdecimal",
  "sqlx-exasol-impl/bigdecimal",
]
chrono = [
  "sqlx-core/chrono",
  "sqlx-exasol-macros?/chrono",
  "sqlx-exasol-impl/chrono",
]
rust_decimal = [
  "sqlx-core/rust_decimal",
  "sqlx-exasol-macros?/rust_decimal",
  "sqlx-exasol-impl/rust_decimal",
]
time = ["sqlx-core/time", "sqlx-exasol-macros?/time", "sqlx-exasol-impl/time"]
uuid = ["sqlx-core/uuid", "sqlx-exasol-macros?/uuid", "sqlx-exasol-impl/uuid"]
geo-types = ["sqlx-exasol-macros?/geo-types", "sqlx-exasol-impl/geo-types"]

# Driver specific features
compression = ["sqlx-exasol-impl/compression"]
etl = ["sqlx-exasol-impl/etl"]

[workspace.dependencies]
# Internal
sqlx-exasol = { version = "=0.9.2", path = "." }
sqlx-exasol-macros = { version = "=0.9.2", path = "sqlx-exasol-macros" }
sqlx-exasol-impl = { version = "=0.9.2", path = "sqlx-exasol-impl" }

# SQLx
sqlx-cli = { version = "=0.9.0-alpha.1", default-features = false }
sqlx-core = { version = "=0.9.0-alpha.1", default-features = false, features = [
  "offline",
  "migrate",
] }
sqlx-macros-core = { version = "=0.9.0-alpha.1", default-features = false }
sqlx-orig = { version = "=0.9.0-alpha.1", default-features = false, package = "sqlx" }

# External
arrayvec = { version = "0.7", default-features = false }
async-compression = { version = "0.4", default-features = false, features = [
  "futures-io",
  "gzip",
  "zlib",
] }
async-tungstenite = { version = "0.29", default-features = false, features = [
  "handshake",
  "futures-03-sink",
] }
base64 = { version = "0.22", default-features = false }
bigdecimal = { version = "0.4", default-features = false, features = [
  "std",
  "serde-json",
] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", default-features = false, features = ["derive"] }
console = { version = "0.15", default-features = false }
dotenvy = { version = "0.15", default-features = false }
flume = { version = "0.12", default-features = false, features = ["async"] }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = [
  "sink",
] }
geo-types = { version = "0.7", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
hyper = { version = "1", default-features = false, features = [
  "server",
  "http1",
] }
native-tls = { version = "0.2", default-features = false }
paste = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false, features = [
  "proc-macro",
] }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false, features = [
  "std",
  "std_rng",
] }
rcgen = { version = "0.13", default-features = false, features = ["pem"] }
rsa = { version = "0.9", default-features = false, features = ["pem", "std"] }
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
] }
semver = { version = "1", default-features = false, features = [
  "serde",
  "std",
] }
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1", default-features = false, features = [
  "std",
  "raw_value",
] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
syn = { version = "2", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "proc-macro",
  "visit-mut",
] }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = [
  "std",
  "serde",
  "formatting",
  "parsing",
  "macros",
] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["serde"] }
wkt = { version = "0.14", default-features = false, features = [
  "geo-types",
  "serde",
] }

[dependencies]
sqlx-exasol-macros = { workspace = true, optional = true }
sqlx-exasol-impl = { workspace = true }
sqlx-core = { workspace = true }
sqlx-orig = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
futures-util = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
