[package]
name = "sqlx-exasol-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
default = ["native-tls", "completions", "sqlx-toml"]

rustls = ["sqlx-cli/rustls"]
native-tls = ["sqlx-cli/native-tls"]

openssl-vendored = ["sqlx-cli/openssl-vendored"]

completions = ["sqlx-cli/openssl-vendored"]

sqlx-toml = ["sqlx-cli/sqlx-toml"]

[dependencies]
sqlx-exasol = { workspace = true }
sqlx-cli = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
