[package]
name = "sqlx-exasol-impl"
description = "Driver implementation for sqlx-exasol. Not meant to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
# SQLx inherited features
any = ["sqlx-core/any"]
migrate = ["sqlx-core/migrate", "dep:dotenvy", "dep:hex"]
macros = ["dep:sqlx-macros-core", "sqlx-macros-core?/macros"]

# Type Integration features
uuid = ["sqlx-core/uuid", "dep:uuid"]
chrono = ["sqlx-core/chrono", "dep:chrono"]
rust_decimal = ["sqlx-core/rust_decimal", "dep:rust_decimal"]

# TLS features
tls = ["dep:rcgen"]
rustls = ["dep:rustls", "sqlx-core/_tls-rustls", "tls"]
native-tls = ["dep:native-tls", "sqlx-core/_tls-native-tls", "tls"]

# Driver specific features
compression = ["dep:async-compression"]
etl = ["dep:http-body-util", "dep:hyper", "dep:futures-channel"]

[dependencies]
arrayvec = { workspace = true }
async-tungstenite = { workspace = true }
base64 = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Feature flagged optional dependencies
async-compression = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
sqlx-macros-core = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "migrate"] }

[lints]
workspace = true
