[package]
name = "sqlx-exasol-impl"
description = "Driver implementation for sqlx-exasol. Not meant to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
# SQLx inherited features
any = ["sqlx-core/any"]
migrate = ["sqlx-core/migrate", "dep:dotenvy", "dep:hex"]
macros = ["dep:sqlx-macros-core", "sqlx-macros-core?/macros"]
sqlx-toml = ["sqlx-core/sqlx-toml"]

# Type Integration features
bigdecimal = ["sqlx-core/bigdecimal", "dep:bigdecimal"]
chrono = ["sqlx-core/chrono", "dep:chrono"]
geo-types = ["dep:geo-types", "dep:wkt"]
json = ["sqlx-core/json"]
rust_decimal = ["sqlx-core/rust_decimal", "dep:rust_decimal"]
time = ["sqlx-core/time", "dep:time"]
uuid = ["sqlx-core/uuid", "dep:uuid"]

# TLS features
tls = ["dep:rcgen", "dep:sha2"]
native-tls = [
  "dep:native-tls",
  "sqlx-core/_tls-native-tls",
  "tls",
  "rcgen?/aws_lc_rs",
]
rustls-aws-lc-rs = ["rustls", "rcgen?/aws_lc_rs"]
rustls-ring = ["rustls", "rcgen?/ring"]
rustls = ["dep:rustls", "sqlx-core/_tls-rustls", "tls"]

# Driver specific features
compression = ["dep:async-compression"]
etl = ["dep:flume", "dep:futures-channel", "dep:hyper"]


[dependencies]
arrayvec = { workspace = true }
async-tungstenite = { workspace = true }
base64 = { workspace = true }
futures-io = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Feature flagged optional dependencies
async-compression = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
flume = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
geo-types = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sqlx-macros-core = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wkt = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "migrate"] }

[lints]
workspace = true
