[package]
name = "sqlx-exasol-macros"
description = "Macros support for sqlx-exasol. Not meant to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[features]
# SQLx features
derive = ["dep:sqlx-macros-core", "sqlx-macros-core?/derive"]
macros = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/macros",
  "sqlx-exasol-impl?/macros",
]
migrate = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/migrate",
  "sqlx-exasol-impl?/migrate",
]
sqlx-toml = ["dep:sqlx-macros-core", "sqlx-macros-core?/sqlx-toml"]

# Types
bigdecimal = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/bigdecimal",
  "sqlx-exasol-impl?/bigdecimal",
]
chrono = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/chrono",
  "sqlx-exasol-impl?/chrono",
]
geo-types = ["dep:sqlx-exasol-impl", "sqlx-exasol-impl?/geo-types"]
json = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/json",
  "sqlx-exasol-impl?/json",
]
rust_decimal = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/rust_decimal",
  "sqlx-exasol-impl?/rust_decimal",
]
time = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/time",
  "sqlx-exasol-impl?/time",
]
uuid = [
  "dep:sqlx-macros-core",
  "dep:sqlx-exasol-impl",
  "sqlx-macros-core?/uuid",
  "sqlx-exasol-impl?/uuid",
]

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

sqlx-macros-core = { workspace = true, optional = true }
sqlx-exasol-impl = { workspace = true, optional = true }

[lints]
workspace = true
